Refactor: применение Java 21 best practices - records, HttpClient, WeatherException