@@ -6,11 +6,13 @@ import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import weatherapp.model.WeatherData;
 
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -18,31 +20,46 @@ public class WeatherService {
 
     private static final String GEOCODING_API = "https://geocoding-api.open-meteo.com/v1/search?name=%s&count=1&language=es";
     private static final String WEATHER_API = "https://api.open-meteo.com/v1/forecast?latitude=%.4f&longitude=%.4f&current=temperature_2m,relative_humidity_2m,wind_speed_10m,weather_code&daily=temperature_2m_max,temperature_2m_min";
+    private static final int TIMEOUT_SECONDS = 10;
 
-    public WeatherData getWeatherForCity(String city) throws Exception {
-        double[] coords = getCoordinates(city);
+    private final HttpClient httpClient;
+
+    public WeatherService() {
+        this.httpClient = HttpClient.newBuilder()
+                .connectTimeout(Duration.ofSeconds(TIMEOUT_SECONDS))
+                .build();
+    }
+
+    public WeatherData getWeatherForCity(String city) throws WeatherException {
+        if (city == null || city.trim().isEmpty()) {
+            throw WeatherException.cityNotFound(city != null ? city : "null");
+        }
+        
+        double[] coords = getCoordinates(city.trim());
         if (coords == null) {
-            throw new Exception("Ciudad no encontrada: " + city);
+            throw WeatherException.cityNotFound(city);
         }
         return fetchWeather(coords[0], coords[1]);
     }
 
-    private double[] getCoordinates(String city) throws Exception {
-        String encodedCity = URLEncoder.encode(city, StandardCharsets.UTF_8.toString());
-        String urlString = String.format(GEOCODING_API, encodedCity);
-        URL url = new URL(urlString);
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("GET");
-        conn.setConnectTimeout(5000);
-        conn.setReadTimeout(5000);
+    private double[] getCoordinates(String city) throws WeatherException {
+        try {
+            String encodedCity = URLEncoder.encode(city, StandardCharsets.UTF_8);
+            String urlString = String.format(GEOCODING_API, encodedCity);
+            
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(urlString))
+                    .timeout(Duration.ofSeconds(TIMEOUT_SECONDS))
+                    .GET()
+                    .build();
 
-        if (conn.getResponseCode() != 200) {
-            throw new Exception("Error API Geocoding: HTTP " + conn.getResponseCode());
-        }
+            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
 
-        try (InputStreamReader reader = new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8)) {
-            JsonElement jsonElement = JsonParser.parseReader(reader);
-            JsonObject jsonObject = jsonElement.getAsJsonObject();
+            if (response.statusCode() != 200) {
+                throw WeatherException.apiError("Geocoding", response.statusCode());
+            }
+
+            JsonObject jsonObject = JsonParser.parseString(response.body()).getAsJsonObject();
 
             if (jsonObject.has("results")) {
                 JsonArray results = jsonObject.getAsJsonArray("results");
@@ -54,54 +71,60 @@ public class WeatherService {
                     };
                 }
             }
-        } finally {
-            conn.disconnect();
+            return null;
+            
+        } catch (WeatherException e) {
+            throw e;
+        } catch (Exception e) {
+            throw WeatherException.networkError(e);
         }
-        return null; 
     }
 
-    private WeatherData fetchWeather(double latitude, double longitude) throws Exception {
-        String urlString = String.format(java.util.Locale.US, WEATHER_API, latitude, longitude);
-        URL url = new URL(urlString);
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("GET");
-        conn.setConnectTimeout(5000);
-        conn.setReadTimeout(5000);
+    private WeatherData fetchWeather(double latitude, double longitude) throws WeatherException {
+        try {
+            String urlString = String.format(java.util.Locale.US, WEATHER_API, latitude, longitude);
+            
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(urlString))
+                    .timeout(Duration.ofSeconds(TIMEOUT_SECONDS))
+                    .GET()
+                    .build();
 
-        if (conn.getResponseCode() != 200) {
-            throw new Exception("Error API Clima: HTTP " + conn.getResponseCode());
+            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+
+            if (response.statusCode() != 200) {
+                throw WeatherException.apiError("Clima", response.statusCode());
+            }
+
+            JsonObject responseJson = JsonParser.parseString(response.body()).getAsJsonObject();
+
+            JsonObject current = responseJson.getAsJsonObject("current");
+            double temp = current.get("temperature_2m").getAsDouble();
+            int humidity = current.get("relative_humidity_2m").getAsInt();
+            double wind = current.get("wind_speed_10m").getAsDouble();
+            int weatherCode = current.get("weather_code").getAsInt();
+
+            JsonObject daily = responseJson.getAsJsonObject("daily");
+            JsonArray maxTempsArray = daily.getAsJsonArray("temperature_2m_max");
+            JsonArray minTempsArray = daily.getAsJsonArray("temperature_2m_min");
+
+            List<Double> maxTemps = new ArrayList<>();
+            List<Double> minTemps = new ArrayList<>();
+            
+            for (int i = 0; i < Math.min(maxTempsArray.size(), 5); i++) {
+                maxTemps.add(maxTempsArray.get(i).getAsDouble());
+                minTemps.add(minTempsArray.get(i).getAsDouble());
+            }
+
+            String description = getWeatherDescription(weatherCode);
+
+            return new WeatherData(temp, humidity, wind, description, maxTemps, minTemps);
+
+        } catch (WeatherException e) {
+            throw e;
+        } catch (Exception e) {
+            throw WeatherException.networkError(e);
         }
-
-        JsonObject response;
-        try (InputStreamReader reader = new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8)) {
-            response = JsonParser.parseReader(reader).getAsJsonObject();
-        } finally {
-            conn.disconnect();
-        }
-        
-        // Clima actual
-        JsonObject current = response.getAsJsonObject("current");
-        double temp = current.get("temperature_2m").getAsDouble();
-        int humidity = current.get("relative_humidity_2m").getAsInt();
-        double wind = current.get("wind_speed_10m").getAsDouble();
-        int weatherCode = current.get("weather_code").getAsInt();
-
-        // Pronóstico de próximos 7 días
-        JsonObject daily = response.getAsJsonObject("daily");
-        JsonArray maxTempsArray = daily.getAsJsonArray("temperature_2m_max");
-        JsonArray minTempsArray = daily.getAsJsonArray("temperature_2m_min");
-
-        List<Double> maxTemps = new ArrayList<>();
-        List<Double> minTemps = new ArrayList<>();
-        
-        for (int i = 0; i < Math.min(maxTempsArray.size(), 5); i++) {
-            maxTemps.add(maxTempsArray.get(i).getAsDouble());
-            minTemps.add(minTempsArray.get(i).getAsDouble());
-        }
-
-        String description = getWeatherDescription(weatherCode);
-
-        return new WeatherData(temp, humidity, wind, description, maxTemps, minTemps);
     }
 
     private String getWeatherDescription(int code) {
